--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -21,7 +21,7 @@
     {% endif %}
     {{ thisyear }}
     {% if site.owner %}{{ site.owner }}{% else %}{{ site.title }}{% endif %}</li>
-    <li>Design: <a href="http://html5up.net" target="_blank">_xcaldb24x_</a></li>
+    <li>Design: <a href="http://html5up.net" target="_blank">_ailtongama238_</a></li>
     <li><a href="http://jekyllrb.com" target="_blank"></a></li>
   </ul>
 </footer>
